fixed page layout issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,12 @@
 /* BODY */
-body, h1, h2, h3 {
+body {
   margin: 0;
-  font-size: calc(16px + .5vw)
+  font-size: 16px
 }
 
+/* h1{
+  font-size: calc(16px + 2vw);
+} */
 * {
   box-sizing: border-box;
 }
@@ -83,7 +86,6 @@ p {
 
 .about-img{
     width: 100%;
-    height: 100%;
     margin: 0 0 0 0;
     border-radius: 4px;
   }
